# Radix

./: .env.example  .gitignore  CLAUDE.md  Makefile  SPEC.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.llm.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  audit.py  auth.py  chat.py  collections.py  conversations.py  documents.py  health.py  indexing.py  search.py  sources.py  uploads.py  users.py
backend/app/core/: config.py  deps.py  permissions.py  queue.py  security.py  settings_store.py
backend/app/models/: __init__.py  schemas.py  tables.py
backend/app/services/: chunking.py  conversations.py  ingest.py  vectorstore.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_documents_source_fk.py  0003_fts_simple_config.py  0004_chat_persistence.py
backend/tests/: conftest.py  test_auth.py  test_chat_api.py  test_chunking.py  test_collections_audit_api.py  test_conversations_api.py  test_deploy_consistency.py  test_documents_api.py  test_embeddings_integration.py  test_health.py  test_indexing_api.py  test_ingest.py  test_llm_provider.py  test_migrations.py  test_parsing_integration.py  test_parsing_units.py  test_permission_isolation.py  test_permissions.py  test_rag_service.py  test_rag_units.py  test_rendering.py  test_search_api.py  test_search_service.py  test_search_units.py  test_security.py  test_sources_api.py  test_uploads_api.py  test_users_api.py  test_worker_jobs.py
backend/worker/: jobs.py  main.py
deploy/: _common.sh  (+4 more)
(+74 files in other folders)
